--- a/css/mobile.css
+++ b/css/mobile.css
@@ -629,17 +629,17 @@ ul, li {
 .fm-dialog.mobile.payment-stripe-dialog,
 .fm-dialog.mobile.payment-stripe-success-dialog,
 .fm-dialog.mobile.payment-stripe-failure-dialog {
-    width: 100%;
-    height: 100%;
+    height: initial;
     max-width: 640px;
     max-height: 640px;
-    margin: 0 auto;
-    right: 0;
-    bottom: 0;
-    top: 7%;
-    left: 0;
-    position: absolute;
+    margin: auto;
+    right: 8px;
+    bottom: 8px;
+    top: 8px;
+    left: 8px;
+    position: fixed;
     border: none;
+    width: initial;
 }
 .mobile.payment-stripe-success-dialog .success-logo,
 .mobile.payment-stripe-failure-dialog .fail-logo {
@@ -4030,7 +4030,7 @@ div.checkboxOn {
     padding: 24px 20px;
 }
 .payment-address-dialog .container-box-title {
-    margin: 12px 20px 24px 16px;
+    margin: 12px 20px 24px;
 }
 .payment-address-dialog .payment-note-first {
     color: #495057;
@@ -4051,7 +4051,7 @@ div.checkboxOn {
     background-color: #F8F8F8;
     box-sizing: border-box;
     height: 48px;
-    margin-bottom: 8px;
+    margin: 0 20px 8px;
     overflow: hidden;
     padding: 9px 55px 0 12px;
     position: relative;
@@ -4063,34 +4063,24 @@ div.checkboxOn {
 }
 .payment-address-dialog .default-select {
     float: none;
-    margin: 0 24px 12px;
+    margin: 0 20px 12px;
     min-width: 0;
-    width: calc(100% - 48px);
-}
-.payment-address-dialog .default-select:before {
-    content: "";
-    box-sizing: border-box;
-    border-radius: 4px;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
-    height: 48px;
-    left: 0;
-    position: absolute;
-    width: 100%;
+    width: calc(100% - 40px);
 }
 /* This is to undo all the styling caused by other classnames. I will go through and tidy up the classes after. */
 .mobile.main-block.payment-address-dialog {
-    top: 32px;
+    top: 8px;
     left: 8px;
     right: 8px;
     bottom: 8px;
     width: initial;
     height: initial;
-    position: absolute;
+    position: fixed;
     -moz-border-radius: 16px;
     -webkit-border-radius: 16px;
     border-radius: 16px;
     max-width: 540px;
-    margin: 0 auto;
+    margin: auto;
 }
 /* Styling for jQueryUI selectmenu in use with address dialog */
 .ui-selectmenu-button {
@@ -4191,17 +4181,16 @@ div.checkboxOn {
     color: gray;
     cursor: pointer;
     margin: 0 16px 12px;
-    border: 0;
     height: 48px;
     font-size: 14px;
     line-height: 49px;
     min-width: 150px;
     background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    border: 1px solid #eee;
     background-image: url(../images/mobile/mobile-sprite.png);
     background-repeat: no-repeat;
-    background-position: right -2351px;
+    background-position: right -2350px;
     box-sizing: border-box;
     position: relative;
     text-align: left;
@@ -4285,7 +4274,7 @@ div.checkboxOn {
     box-sizing: border-box;
     text-align: center;
     text-transform: lowercase;
-    margin: 0 16px 8px;
+    margin: 0 20px 8px;
     position: relative;
     overflow: visible;
 }
@@ -4314,7 +4303,7 @@ div.checkboxOn {
 }
 .payment-address-dialog .redirect-information-container {
     position: relative;
-    margin: 12px 16px;
+    margin: 12px 20px;
 }
 .payment-address-dialog .redirect-information {
     background-color: #f7f8fa;
@@ -9057,6 +9046,7 @@ body.bottom-pages.mobile .fmholder.no-scroll, .mobile .fm-holder.no-scroll, .mob
     border-radius: 4px;
 }
 .mobile.payment-result .payment-result-button {
+    margin: 0 auto;
     position: relative;
 }
 .mobile.voucher-redeem-dialog .buttons {
@@ -9385,7 +9375,7 @@ body.bottom-pages.mobile .fmholder.no-scroll, .mobile .fm-holder.no-scroll, .mob
     left: 0;
     right: 0;
     bottom: initial;
-    top: 32px;
+    top: 8px;
     height: 22px;
     z-index: 1200;
     margin: 0 auto;
@@ -10333,12 +10323,6 @@ Thank You dialog
         margin: 0 auto;
         padding: 36px 38px;
     }
-    .mobile.pro-card-container {
-        margin-left: -48px;
-        width: -webkit-calc(100% + 60px);
-        width: -moz-calc(100% + 60px);
-        width: calc(100% + 60px);
-    }
     .mobile.country-selector-dialog {
         max-width: 420px;
         left: 50%;
@@ -10833,7 +10817,6 @@ Thank You dialog
     }
     .mobile.remember-me,
     .mobile.confirm-terms,
-    .payment-address-dialog .ui-selectmenu-button,
     .mobile.signin-input {
         margin-left: 24px;
         margin-right: 24px;
@@ -10845,9 +10828,6 @@ Thank You dialog
         padding: 17px 0;
         margin-left: 24px;
         margin-right: 24px;
-    }
-    .payment-address-dialog .container-box-title {
-        margin: 12px 24px 24px 24px;
     }
 }
 
